# rentseeker

./: .gitignore  Dockerfile  README.md  build.icns  crop_icon.py  docker-compose.yml  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  test-integration.ts  tsconfig.json  ui-mvp.html  vitest.config.ts
config/: deployment.yaml  example_project.yaml  schema.yaml
connectors/: __init__.py  api_connector.py  csv_connector.py  custom_template.py  excel_connector.py  pattern_match.py  web_search.py
core/: __init__.py  entity.py  expander.py  orchestrator.py  scorer.py  scoring.py  verification.py
data/input/: sample_input.csv
docs/: ARCHITECTURE.md  CONNECTORS.md  DEPLOYMENT.md
docs/references/: STACK_GROUNDING.md
phoenix/: __init__.py  cli.py  config.py  pipeline.py  workbench_bridge.py
phoenix/connectors/: __init__.py
phoenix/core/: __init__.py  entity.py  expander.py  models.py  normalization.py  orchestrator.py  scorer.py  scoring.py  verification.py
phoenix/ui/: __init__.py  app.py
schemas/: entity_schema.json  output_schema.json
scripts/: convert-sbf-xlsx.py
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  index.html  loading-owner-analytics.css  main.tsx  parcel-explorer.css  styles.css  vite-env.d.ts
src/shared/: sourceRegistry.ts  types.ts
tests-dashboard/: geoarea.test.ts  pmtiles.test.ts  stress-workspace.test.ts  workbench.test.ts  workspace-query-semantics.test.ts
tests/fixtures/: sample_input.csv
tests/integration/: test_pipeline.py  (+1 more)
ui/: app.py
(+77 files in other folders)
